[gd_scene load_steps=13 format=3 uid="uid://bnq0is7hlp1tm"]

[ext_resource type="Script" uid="uid://hwgj0esjbw30" path="res://Scenes/GUI/ProfileMenu/profile_menu.gd" id="1_6dnna"]
[ext_resource type="Texture2D" uid="uid://blfuuktnfhgvp" path="res://Assets/Images/profileMenu.jpg" id="1_glmnp"]
[ext_resource type="Texture2D" uid="uid://cxjdc8gwmic2v" path="res://Assets/Images/GUI/Button2/normalButton.png" id="2_6q3p3"]
[ext_resource type="Texture2D" uid="uid://cdofdknd6yls4" path="res://Assets/Images/GUI/Labels/profileLabel.png" id="2_7wxih"]
[ext_resource type="Texture2D" uid="uid://c8xq1pjpvis2q" path="res://Assets/Images/GUI/Button2/pressedButton.png" id="3_wnvrs"]
[ext_resource type="Texture2D" uid="uid://br7lqqh6sk8fk" path="res://Assets/Images/GUI/Button2/hoverButton.png" id="4_kbfpx"]
[ext_resource type="FontFile" uid="uid://uuvlepr3a5y1" path="res://Assets/Fonts/NicerNightie.ttf" id="5_jwkjo"]
[ext_resource type="Texture2D" uid="uid://biq054ba86d0" path="res://Assets/Images/GUI/Box1/Box1.png" id="7_wnvrs"]

[sub_resource type="Theme" id="Theme_6dnna"]

[sub_resource type="LabelSettings" id="LabelSettings_v8cs8"]
line_spacing = 8.995
font = ExtResource("5_jwkjo")
font_size = 57
font_color = Color(0, 0, 0, 1)
outline_size = 2
outline_color = Color(1, 0, 0, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rqqtr"]
font = ExtResource("5_jwkjo")
font_size = 26
font_color = Color(0.011764706, 0.011764706, 0, 1)
outline_size = 5
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_v8cs8"]

[node name="ProfileMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6dnna")

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = -670
layout_mode = 0
offset_left = -91.0
offset_top = -29.0
offset_right = 2047.0
offset_bottom = 1125.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ProfileMenu" type="Sprite2D" parent="."]
position = Vector2(958, 514.5)
scale = Vector2(1.1411132, 1.1376953)
texture = ExtResource("1_glmnp")

[node name="ProfileLabel" type="Sprite2D" parent="."]
position = Vector2(602, 200.5)
texture = ExtResource("2_7wxih")

[node name="NameLineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 301.5
offset_right = 623.0
offset_bottom = 342.5
placeholder_text = "....."
alignment = 1

[node name="ProfileName" type="Sprite2D" parent="."]
position = Vector2(1171.0001, 198)
scale = Vector2(0.4515896, 0.2972973)
texture = ExtResource("7_wnvrs")

[node name="UserNameSelected" type="Label" parent="ProfileName"]
offset_left = -117.405266
offset_top = -97.54545
offset_right = 117.40504
offset_bottom = 97.54543
theme = SubResource("Theme_6dnna")
text = "asdasd"
label_settings = SubResource("LabelSettings_v8cs8")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 171

[node name="quitProfileButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1330.0
offset_top = 171.5
offset_right = 1462.3269
offset_bottom = 213.69057
texture_normal = ExtResource("2_6q3p3")
texture_pressed = ExtResource("3_wnvrs")
texture_hover = ExtResource("4_kbfpx")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="quitProfileButton"]
layout_mode = 0
offset_left = 46.999992
offset_top = 10.999997
offset_right = 98.0
offset_bottom = 36.999996
text = "Quit"
label_settings = SubResource("LabelSettings_rqqtr")

[node name="backButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1169.0
offset_top = 620.5
offset_right = 1417.0035
offset_bottom = 704.8811
texture_normal = ExtResource("2_6q3p3")
texture_pressed = ExtResource("3_wnvrs")
texture_hover = ExtResource("4_kbfpx")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="backButton"]
layout_mode = 0
offset_left = 59.590927
offset_top = 30.763947
offset_right = 184.59093
offset_bottom = 57.763947
text = "Back to menu"
label_settings = SubResource("LabelSettings_rqqtr")

[node name="createButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 626.0
offset_top = 297.5
offset_right = 758.3269
offset_bottom = 339.69055
texture_normal = ExtResource("2_6q3p3")
texture_pressed = ExtResource("3_wnvrs")
texture_hover = ExtResource("4_kbfpx")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="createButton"]
layout_mode = 0
offset_left = 39.435173
offset_top = 8.7897005
offset_right = 98.14977
offset_bottom = 35.158794
text = "Create"
label_settings = SubResource("LabelSettings_rqqtr")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 420.0
offset_top = 370.5
offset_right = 747.0
offset_bottom = 705.5

[node name="ProfilesList" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="deleteProfileButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1100.0
offset_top = 246.5
offset_right = 1232.3269
offset_bottom = 288.69055
texture_normal = ExtResource("2_6q3p3")
texture_pressed = ExtResource("3_wnvrs")
texture_hover = ExtResource("4_kbfpx")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="deleteProfileButton"]
layout_mode = 0
offset_left = 36.999992
offset_top = 8.999997
offset_right = 96.99999
offset_bottom = 35.999996
text = "Delete"
label_settings = SubResource("LabelSettings_rqqtr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 422.0
offset_top = 366.5
offset_right = 758.0
offset_bottom = 699.5
mouse_filter = 2
theme = SubResource("Theme_v8cs8")
color = Color(0.20932834, 0.15104471, 0.2606381, 0.32500002)
